--- a/src/index.html
+++ b/src/index.html
@@ -137,9 +137,9 @@
     <section class="slider">
         <div class="slider__block slider__block--description">
             <div class="slide__description slideDescription slide__block">
-                <div class="slide__title slideTitle">
+                <div class="slide__title slideTitle slideTitle--leftpad">
                     <span class="slideTitle__text slideTitle__text--red-white">
-                        Влюбляем</span> <span class="slideTitle__text">в сквош</span>
+                        Влюбляем</span> <span class=" slideTitle__text">в сквош</span>
                 </div>
                 <div class="slideDescription__content ">
                     <div class="logoSymbol"> <span
