add articles pagers

--- a/src/article.html
+++ b/src/article.html
@@ -254,7 +254,7 @@
             </div>
         </section>
         <aside class="asideColumn">
-            <div class="club__promo">
+            <div class="club__promo js-fixPromo">
                 <div class="club__promoBlock">
                     <div class="club__promoText">Хочу <span class="red">попробовать</span> сквош, где можно?</div>
                     <div class="club__promoImgBlock">
