fix mobile style bugs

--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
 
         <div class="slider__pagination">
             <button class="paginationBlock__item" aria-label="Previous" type="button"
-                    id="main-slider-prev">&#11104;
+                    id="main-slider-prev">&larr;
             </button>
             <div class="slider__paginationContainer">
                 <ul class="paginationBlock__container js-paginationBlock">
@@ -242,7 +242,7 @@
                 </ul>
             </div>
             <button id="main-slider-next" class="paginationBlock__item" aria-label="Next"
-                    type="button">&#10141;
+                    type="button">&rarr;
             </button>
         </div>
     </section>
