adaptive about page

--- a/src/404.html
+++ b/src/404.html
@@ -144,7 +144,8 @@
             </div>
             <div class="simplepage__content ">
                 <div class="logoSymbol"> <span
-                        class="simplepage__text"> Неправильно набран адрес или такой страницы на сайте больше не существует.
+                        class="simplepage__text simplepage__text--bold"> Неправильно набран адрес или такой страницы на сайте больше не
+                    существует.
                             <br>
                             <br>
                             Вы можете вернуться назад или перейти на главную, нажав на кнопку ниже.</span></div>
