--- a/src/about.html
+++ b/src/about.html
@@ -141,9 +141,9 @@
                 <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная</a></li>
                 <li class="breadcrumbs__item">О нас</li>
             </ul>
-            <div class="slide__title slideTitle">
+            <h1 class="slide__title slideTitle h1">
                 <span class="slideTitle__text">О нас</span>
-            </div>
+            </h1>
             <div class="simplepage__content ">
                 <div class="logoSymbol">
                     <span class="simplepage__text simplepage__text--bold">Студенты и предприниматели, профессоры и спортсмены, топ-менеджеры и журналисты.</span>
@@ -165,9 +165,9 @@
     </section>
     <section class="about">
         <div class="about__block about__block--grey">
-            <div class="about__title aboutTitle titleText">
+            <h2 class="about__title aboutTitle titleText h2">
                 С чего всё <span class="red">начиналось</span>
-            </div>
+            </h2>
             <div class="aboutDescription__content ">
                 <div class="logoSymbol">
                         <span class="aboutDescription__text aboutDescription__text--bold">
