--- a/src/index.html
+++ b/src/index.html
@@ -137,10 +137,10 @@
     <section class="slider">
         <div class="slider__block slider__block--description">
             <div class="slide__description slideDescription slide__block">
-                <div class="slide__title slideTitle slideTitle--leftpad">
+                <h1 class="slide__title h1 slideTitle slideTitle--leftpad">
                     <span class="slideTitle__text slideTitle__text--red-white">
                         Влюбляем</span> <span class=" slideTitle__text">в сквош</span>
-                </div>
+                </h1>
                 <div class="slideDescription__content ">
                     <div class="logoSymbol"> <span
                             class="slideDescription__text slideDescription__text--bold">Пожалуй, это лучшая спортивная
@@ -248,9 +248,9 @@
     </section>
     <section class="about">
         <div class="about__block about__block--grey">
-            <div class="about__title aboutTitle titleText">
+            <h2 class="about__title h2 aboutTitle titleText">
                 Кто мы и почему <span class="red">любим сквош</span>
-            </div>
+            </h2>
             <div class="aboutDescription__content ">
                 <div class="logoSymbol">
                         <span class="aboutDescription__text aboutDescription__text--bold">
@@ -282,8 +282,9 @@
     <section class="instagram innerWrapper">
         <div class="wrapper">
             <div class="instagram__container">
-                <div class="instagram__title titleText">наш инстаграм</div>
-                <div class="instagram__description logoSymbol">Подпишитесь на наш инстаграм, чтобы быть в курсе всех
+                <h2 class="instagram__title titleText h2">наш инстаграм</h2>
+                <div class="instagram__description logoSymbol">Подпишитесь на наш инстаграм,
+                    чтобы быть в курсе всех
                     событий
                     #squash4friends
                 </div>
@@ -309,7 +310,7 @@
 
     <section class="ambassadors innerWrapper">
         <div class="wrapper">
-            <div class="ambassadors__title titleText">Амбассадоры</div>
+            <h2 class="ambassadors__title titleText h2">Амбассадоры</h2>
             <div class="ambassadors__filter  filter">
                 <div class="selectBox">
                     <select class="select ambassadors__select filter__select" name="country">
@@ -529,8 +530,8 @@
     </section>
     <section class="orders innerWrapper">
         <div class="wrapper">
-            <div class="orders__title titleText titleText--white titleText--center">Как стать частью squash4friends
-            </div>
+            <h2 class="orders__title titleText titleText--white titleText--center h2">Как стать частью squash4friends
+            </h2>
             <div class="orders__container" id="orders-slider">
                 <div class="orders__item orderBlock">
                     <div class="orderBlock__main">
@@ -705,7 +706,7 @@
 
     <section class="articles innerWrapper">
         <div class="wrapper">
-            <div class="articles__title titleText">Полезные статьи</div>
+            <h2 class="articles__title titleText h2">Полезные статьи</h2>
             <div class="articles__container" id="articles-slider">
                 <div class="articles__item article">
                     <div class="article__img">
@@ -844,7 +845,7 @@
 
     <section class="seo  innerWrapper">
         <div class="wrapper">
-            <div class="seo__title titleText">squash4friends</div>
+            <h2 class="seo__title titleText h2">squash4friends</h2>
             <div class="seo__description logoSymbol">Блок под SEO-текст<br>
                 — Сочетание физической активности и ментальной деятельности<br>
                 — часто называют шахматами на корте<br>
