--- a/src/wiki.html
+++ b/src/wiki.html
@@ -140,7 +140,7 @@
                     <li class="breadcrumbs__item">Сквош-вики</li>
                 </ul>
                 <div class="pageTitle__title">
-                    <h1 class="titleText">Сквош-вики</h1>
+                    <h1 class="titleText h1">Сквош-вики</h1>
                 </div>
             </div>
         </div>
@@ -219,7 +219,7 @@
 
     <section class="articles innerWrapper">
         <div class="wrapper">
-            <div class="articles__title titleText">Полезные статьи</div>
+            <h2 class="articles__title titleText h2">Полезные статьи</h2>
             <div class="articles__container" id="articles-slider">
                 <div class="articles__item article">
                     <div class="article__img">
@@ -360,7 +360,7 @@
     </section>
     <section class="seo  innerWrapper">
         <div class="wrapper">
-            <div class="seo__title titleText">squash4friends</div>
+            <h2 class="seo__title titleText h2">squash4friends</h2>
             <div class="seo__description logoSymbol">Блок под SEO-текст<br>
                 — Сочетание физической активности и ментальной деятельности<br>
                 — часто называют шахматами на корте<br>
