style club detail page

--- a/src/club.html
+++ b/src/club.html
@@ -122,21 +122,12 @@
                         <img class="clubSlider__itemImage" src="img/club_detail.png" alt="" title="">
                         <img class="clubSlider__itemImage" src="img/club_detail.png" alt="" title="">
                     </div>
-                    <div class="clubSlider__paginationWrapper">
-                        <button class="slick-prev paginationBlock__item" data-slider="club-slider"
-                                aria-label="Previous" type="button">&#11104;
-                        </button>
-                        <div class="clubSlider__pagination paginationBlock"></div>
-                        <button data-slider="club-slider" class="slick-next paginationBlock__item"
-                                aria-label="Next" type="button">&#10141;
-                        </button>
-                    </div>
                 </div>
             </div>
 
             <div class="club__contacts">
                 <div class="club__instagram">
-                    <a class="red club__instaLink" href="https://www.instagram.com/squashclub.moscow/">@squashclub
+                    <a class="red club__instaLink" target="_blank" href="https://www.instagram.com/squashclub.moscow/">@squashclub
                         .moscow</a>
                 </div>
                 <div class="club__address">
@@ -174,7 +165,7 @@
             </div>
 
             <div class="club__descriptionWrapper">
-                <div class="club__descriptionTitle">Описание клуба</div>
+                <h3 class="club__descriptionTitle h3">Описание клуба</h3>
                 <div class="club__description typography">
                     <p> Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
                         важные задания по разработке существенных финансовых и административных <span
