--- a/src/clubs.html
+++ b/src/clubs.html
@@ -107,7 +107,7 @@
                     <li class="breadcrumbs__item">Клубы</li>
                 </ul>
                 <div class="pageTitle__title">
-                    <h1 class="titleText">Клубы</h1>
+                    <h1 class="h1 titleText">Клубы</h1>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                         <div class="mapClub__metro">Волгоградский проспект</div>
                         <div class="mapClub__schedule">Ежедневно 10:00—22:00</div>
                         <div class="linkBlock mapClub__btnBlock">
-<a href="club.html" class="linkBlock__item linkBlock__item--red">Подробнее о клубе</a>
+                            <a href="club.html" class="linkBlock__item linkBlock__item--red">Подробнее о клубе</a>
                         </div>
                     </li>
                     <li class="mapClubs__item mapClub">
@@ -162,23 +162,72 @@
     </section>
     <section class="textBlock innerWrapper">
         <div class="wrapper">
-            <div class="titleText">Не нашли своего клуба?</div>
+            <h2 class="h2 titleText">Не нашли своего клуба?</h2>
             <div class="subTitle logoSymbol">Напишите нам на почту, либо заполните форму ниже и мы внесем его в список
             </div>
             <form class="textBlock__form form" method="post">
                 <div class="textBlock__fields">
-                <select class="select" name="country">
-                    <option value="Россия">Россия</option>
-                    <option value="Франция">Франция</option>
-                </select>
-                <select class="select" name="city">
-                    <option value="Москва">Москва</option>
-                    <option value="Новосибирск">Новосибирск</option>
-                </select>
-                <div class="inputWrapper"><input type="text" class="input required" placeholder="Название клуба"></div>
-                <div class="inputWrapper"><input type="text" class="input required" placeholder="ФИО"></div>
-                <div class="inputWrapper"><input type="tel" class="input required" placeholder="Телефон"></div>
-                <div class="inputWrapper"><input type="email" class="input required" placeholder="Email"></div>
+                    <div class="selectBox inputWrapper">
+                        <select class="select ambassadors__select filter__select" name="country">
+                            <option class="option filter__option ambassadors__option" selected>
+                                Россия
+                            </option>
+                            <option class="option filter__option ambassadors__option">Украина</option>
+                        </select>
+                        <div class="selectBox__pseudo">
+                            <div class="selectBox__pseudoCurrent js-pseudo-select">
+                                <div class="selectBox__value">
+                                    <img class="selectBox__pseudoImage"
+                                         src="./img/russian.png">Россия
+                                </div>
+                            </div>
+                            <ul class="selectBox__pseudoList js-pseudo-options">
+                                <li class="selectBox__pseudoItem">
+                                    <div class="selectBox__value">
+                                        <img class="selectBox__pseudoImage"
+                                             src="./img/russian.png">Россия
+                                    </div>
+                                </li>
+                                <li class="selectBox__pseudoItem">
+                                    <div class="selectBox__value">
+                                        <img class="selectBox__pseudoImage"
+                                             src="./img/ua.png">Украина
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="inputWrapper"><input type="text" class="input required" placeholder="ФИО"></div>
+                    <div class="selectBox inputWrapper">
+                        <select class="select ambassadors__select filter__select" name="city">
+                            <option class="filter__option option">Выберите город</option>
+                            <option class="filter__option option">Москва</option>
+                            <option class="filter__option option">Санкт-Петербург</option>
+                            <option class="filter__option option">Новосибирск</option>
+                        </select>
+                        <div class="selectBox__pseudo">
+                            <div
+                                    class="selectBox__pseudoCurrent js-pseudo-select selectBox__pseudoCurrent--placeholder">
+                                Выберите город
+                            </div>
+                            <ul class="selectBox__pseudoList js-pseudo-options">
+                                <li class="selectBox__pseudoItem">
+                                    <div class="selectBox__value">Москва</div>
+                                </li>
+                                <li class="selectBox__pseudoItem">
+                                    <div class="selectBox__value">Санкт-Петербург</div>
+                                </li>
+                                <li class="selectBox__pseudoItem">
+                                    <div class="selectBox__value">Новосибирск</div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="inputWrapper"><input type="tel" class="input required" placeholder="Телефон"></div>
+                    <div class="inputWrapper"><input type="text" class="input required" placeholder="Название клуба">
+                    </div>
+
+                    <div class="inputWrapper"><input type="email" class="input required" placeholder="Email"></div>
                 </div>
                 <div class="textBlock__footer">
                     <div class="linkBlock textBlock__linkBlock">
