forms media styles

--- a/src/ambassadors.html
+++ b/src/ambassadors.html
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <section class="ambassadors innerWrapper">
+    <section class="ambassadors ambassadors--inner innerWrapper">
         <div class="wrapper">
             <div class="ambassadors__filter  filter">
                 <div class="selectBox">
