--- a/src/index.html
+++ b/src/index.html
@@ -1159,7 +1159,7 @@
         </div>
     </div>
 </form>
-<div class="modalForm modalForm--message">
+<div class="modalForm modalForm--message" style="display: none">
     <div class="modalForm__close js-formClose">
         <span></span>
     </div>
