--- a/src/search_empty.html
+++ b/src/search_empty.html
@@ -135,7 +135,9 @@
             <div class="searchBox__container">
                 <div class="searchBox__title">Поиск по сайту</div>
                 <div class="searchBox__inputWrapper"><input type="text" placeholder="Начните набирать"
-                                                            class="searchBox__input"></div>
+                                                            class="searchBox__input">
+                    <button type="submit" value="" class="searchBox__submit"><img src="./img/search.png"></button>
+                </div>
             </div>
         </section>
         <section class="pageTitle">
