change select module and readme

--- a/src/index.html
+++ b/src/index.html
@@ -371,7 +371,7 @@
             <div class="ambassadors__container ambassadors__container-slider" id="ambassador-slider">
                 <div class="ambassadors__item ambassador">
                     <div class="ambassador__img">
-                        <img src="img/amb1.png" alt="" class="ambassador__picture">
+                        <img src="img/amb1.jpg" alt="" class="ambassador__picture">
                     </div>
                     <div class="ambassador__content">
                         <div class="ambassador__main">
