add email in footer

--- a/src/index.html
+++ b/src/index.html
@@ -951,6 +951,8 @@
             <div class="bottomBar__content">
                 <div class="bottomBar__copyright">
                     © squash4friends 2019
+                        <a class="bottomBar__email" href="mailto:moscowsquashfederation@gmail.com">
+                            moscowsquashfederation@gmail.com</a>
                 </div>
                 <a href="#" class="bottomBar__policy">
                     Политика конфиденциальности
